# NAEGIA-Obfuscator

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/naegia/: AGENTS.md  Cargo.toml
crates/naegia-pe/: AGENTS.md  Cargo.toml
crates/naegia-pe/src/: anti_analysis.rs  checksum.rs  config.rs  debug_strip.rs  error.rs  iat_hash.rs  imports.rs  inspect.rs  layout.rs  lib.rs  obfuscate.rs  pdb_scrub.rs  preset.rs  raw.rs  rva.rs  seed.rs  strings_pad.rs  trampoline.rs  transform.rs  validate.rs
crates/naegia-pe/src/anti_analysis/: entropy.rs  fingerprint.rs  mod.rs
crates/naegia-pe/src/obfuscate/: mod.rs  tests.rs
crates/naegia-pe/tests/: fuzz.rs
crates/naegia/src/: main.rs
crates/naegia/tests/: inspect_windows.rs  protect_layers_windows.rs  protect_regression_windows.rs  protect_windows.rs
crates/naegia/tests/common/: mod.rs
fixtures/hello-windows/: Cargo.toml
fixtures/hello-windows/src/: main.rs
scripts/: ship-verify.sh
