[workspace]
resolver = "2"
members = ["crates/naegia", "crates/naegia-pe"]
exclude = ["fixtures/hello-windows"]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.82"
repository = "https://github.com/kleosr/NAEGIA-Obfuscator"

[profile.release]
strip = true
lto = "thin"
codegen-units = 16
