[package]
name = "naegia-pe"
version = "0.1.3"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "PE32+ (AMD64) validation and transforms for NAEGIA"
readme = "../../README.md"

[dependencies]
getrandom = "0.3"
goblin = "0.9.3"
thiserror = "2"

[dev-dependencies]
proptest = "1"
