[package]
name = "naegia"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "NAEGIA — Windows PE protection CLI"
readme = "../../README.md"

[[bin]]
name = "naegia"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
naegia-pe = { path = "../naegia-pe" }
thiserror = "2"

[dev-dependencies]
goblin = "0.9.3"
naegia-pe = { path = "../naegia-pe" }
